# SDL_OpenGL_OSX_template

./: .gitignore  CMakeLists.txt  README.md
include/: file_tools.h  window_input.h
lib/SDL-release-2.30.5/: CMakeLists.txt
lib/glad/: CmakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
src/: file_tools.cpp  main.cpp  window_input.cpp
